k8s-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: playground-service
  namespace: default
  labels:
    app: playground
spec:
  selector:
    app: playground
  ports:
  - name: http
    port: 80
    targetPort: 8888
    protocol: TCP
  type: ClusterIP
